--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,86 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>add product</title>
-    <style>
-        body{
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        main{
-            padding: 1rem;
-        }
-.main-header{
-    width: 100%;
-    height: 5.5rem;
-    background-color: #5ed0c1;
-    padding: 0 1.5rem;
-}
-.main-header__nav{
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.main-header__item-list{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-.main-header__item{
-    padding: 0;
-            margin: 0 1.5rem;
-}
-.main-header__item a{
-    text-decoration: none;
-    color: black;
-}
-.main-header__item a:hover,
-.main-header__item a:active,
-.main-header__item a.active{
- color: #1131e8f5;
-}
-
-.product-form{
-    width:30rem ;
-    max-width: 90%;
-    margin: auto;
-}
-
-.form-control{
-    margin: 1rem 0;
-}
-
-.form-control label,
-.form-control input{
-
-    display: block;
-    width: 100%;
-}
-
-.form-control input{
-    border: 1px solid rgba(235, 200, 26, 0.925);
-    font: inherit;
-    border-radius: 2px;
-}
-button{
-      font: inherit;
-      border: 1px solid purple;
-      color: purple;
-background: white;
-border-radius: 3px;
-cursor: pointer;
-}
-
-button:hover,
-button:active{
-    background-color: purple;
-    color: white;
-}
-
-
-    </style>
+    <link rel="stylesheet" href="/appsCss/product.css">
 </head>
 <body>
     <header class="main-header">
